# Genesis

./: .env.development  .env.example  .gitignore  pyproject.toml  requirements.txt  run.py
application/: health.py
application/constants/: events.py
application/interfaces/: telemetry.py
application/use_cases/: health.py
docs/: changelog.md  learning-log.md  roadmap.md
domain/tokenization/: tokenizer.py
infrastructure/: telemetry.py
infrastructure/observability/: settings.py  telemetry_service.py
infrastructure/observability/constants/: events.py
infrastructure/observability/providers/: opentelemetry.py
infrastructure/observability/services/: telemetry.py
infrastructure/shared/constants/: application_constants.py  logging_constants.py
tests/: conftest.py  test_container.py  test_health_use_case.py  test_telemetry_service.py  test_telemetry_settings.py  test_webapi_health.py
webapi/: container.py  dependencies.py  main.py  settings.py
webapi/routes/: __init__.py  health.py
webapi/startup/: lifespan.py  telemetry.py
