[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "genesis"
version = "0.1.0"
description = "Backend foundation for Genesis"
requires-python = ">=3.11"
dependencies = [
"fastapi>=0.115.0",
"uvicorn[standard]>=0.34.0",
"opentelemetry-api>=1.30.0",
"opentelemetry-sdk>=1.30.0",
]

[project.optional-dependencies]
dev = [
"pytest>=8.0",
"httpx>=0.28.0",
"pytest-cov>=6.0",
]

[tool.setuptools.packages.find]
include = ["application*", "infrastructure*", "webapi*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
